--- a/config/config.neon
+++ b/config/config.neon
@@ -1,9 +1,10 @@
 parameters:
     url:
-        czc: 'https://www.czc.cz/%s/hledat'
+        baseCzc: 'https://www.czc.cz'
+        searchCzc: 'https://www.czc.cz/%s/hledat'
 
 services:
     Dispatcher: HPT\Dispatcher
 
-    - HPT\Workers\CzcGrabber(%url.czc%)
+    - HPT\Workers\CzcGrabber(%url.baseCzc%, %url.searchCzc%)
     - HPT\Utils\OutputGenerator
